force-app/main/default/objects/CESContract__c/CESContract__c.object-meta.xml
<CustomObject>
    <label>CES Contract</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>CES Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CES Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>