force-app/main/default/objects/CESContract__c/fields/Account_Name_Change__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Monitors account name changes</description>
    <label>Account Name Change</label>
    <type>Checkbox</type>
</CustomField>