force-app/main/default/objects/CESContract__c/fields/Account_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Name__c</fullName>
    <formula>Account__r.RecordType.Name</formula>
    <label>Account Record Type Name</label>
    <type>Text</type>
</CustomField>