force-app/main/default/objects/CESContract__c/fields/Administrative_Charge__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Charge__c</fullName>
    <inlineHelpText>For Charge Level = Unit, enter MMBtu equivalent value</inlineHelpText>
    <label>Administrative Charge</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>