force-app/main/default/objects/CESContract__c/fields/Agency_Services__c.field-meta.xml
<CustomField>
    <fullName>Agency_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the buyer want to appoint the seller to act as its limited agent?</description>
    <inlineHelpText>Does the buyer want to appoint the seller to act as its limited agent?</inlineHelpText>
    <label>Agency Services?</label>
    <type>Checkbox</type>
</CustomField>