force-app/main/default/objects/CESContract__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>