force-app/main/default/objects/CESContract__c/fields/Agreement_Effective_Date_Verified__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Effective_Date_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>has the agreement&#39;s effective date been verified against he actual paper document?</inlineHelpText>
    <label>Agreement Effective Date Verified</label>
    <type>Checkbox</type>
</CustomField>