force-app/main/default/objects/CESContract__c/fields/Allow_Nomination_Change__c.field-meta.xml
<CustomField>
    <fullName>Allow_Nomination_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Nomination Change</label>
    <type>Checkbox</type>
</CustomField>