force-app/main/default/objects/CESContract__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <formula>IF(Credit_Approval_Required__c, &#39;Credit&#39;, &#39;&#39;) + 
IF(Sales_Director_Approval_Required__c, &#39;, Sales Director&#39;, &#39;&#39;) +
IF(VP_Approval_Required__c, &#39;, VP&#39;, &#39;&#39;) +
IF(CEO_President_Approval_Required__c, &#39;, President, and CEO&#39;, &#39;&#39;)</formula>
    <label>Approval Level</label>
    <type>Text</type>
</CustomField>