force-app/main/default/objects/CESContract__c/fields/Assignment_From_Contract__c.field-meta.xml
<CustomField>
    <fullName>Assignment_From_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>contract that this contract was assigned from and shares paper with</description>
    <inlineHelpText>contract that this contract was assigned from and shares paper with</inlineHelpText>
    <label>Assignment From Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>CES Contracts (Assignment From Contract)</relationshipLabel>
    <relationshipName>CES_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>