force-app/main/default/objects/CESContract__c/fields/Authorized_Signature_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signature_User_ID__c</fullName>
    <description>field populated via approval process, which in turn updates the Authorized for Signature by field</description>
    <inlineHelpText>field populated via approval process, which in turn updates the Authorized for Signature by field</inlineHelpText>
    <label>Authorized Signature User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>