force-app/main/default/objects/CESContract__c/fields/Bank_Balance__c.field-meta.xml
<CustomField>
    <fullName>Bank_Balance__c</fullName>
    <label>Bank Balance</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>