force-app/main/default/objects/CESContract__c/fields/Bank_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Bank_Capacity__c</fullName>
    <label>Bank Capacity</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>