force-app/main/default/objects/CESContract__c/fields/Cashout_Over_Adder__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Over_Adder__c</fullName>
    <label>Cashout Over Adder (MMBtu)</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>