force-app/main/default/objects/CESContract__c/fields/Cashout_Over_Index_Name__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Over_Index_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOM Cashout Over Index</description>
    <label>Cashout Over Index Name</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Cashout Over Index Name)</relationshipLabel>
    <relationshipName>CES_Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>