force-app/main/default/objects/CESContract__c/fields/Cashout_Over_Total_Adder__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Over_Total_Adder__c</fullName>
    <formula>Cashout_Over_Adder__c +  Cashout_Over_Margin__c</formula>
    <label>Cashout Over Total Adder</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>