force-app/main/default/objects/CESContract__c/fields/Cashout_Over_Total_Adder_for_TC__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Over_Total_Adder_for_TC__c</fullName>
    <formula>IF ( ISPICKVAL( MDQ_Unit__c , &#39;Therm&#39; )
   , Cashout_Over_Total_Adder__c * 0.1
   , Cashout_Over_Total_Adder__c
)</formula>
    <label>Cashout Over Total Adder for TC</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>