force-app/main/default/objects/CESContract__c/fields/Cashout_Over_Total_Adder_Therm__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Over_Total_Adder_Therm__c</fullName>
    <formula>Cashout_Over_Total_Adder__c  * 0.1</formula>
    <label>Cashout Over Total Adder Therm</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>