force-app/main/default/objects/CESContract__c/fields/Cashout_Under_Adder__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Under_Adder__c</fullName>
    <inlineHelpText>enter negative value to subtract from the index, enter positive value to add to the index</inlineHelpText>
    <label>Cashout Under Adder (MMBtu)</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>