force-app/main/default/objects/CESContract__c/fields/Cashout_Under_Index_Name__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Under_Index_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOM Cashout Under Index</description>
    <label>Cashout Under Index Name</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Cashout Under Index Name)</relationshipLabel>
    <relationshipName>CES_Contracts4</relationshipName>
    <type>Lookup</type>
</CustomField>