force-app/main/default/objects/CESContract__c/fields/Cashout_Under_Margin__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Under_Margin__c</fullName>
    <inlineHelpText>enter negative value for margin gain for CES.  enter positive value for margin loss to CES</inlineHelpText>
    <label>Cashout Under Margin (MMBtu)</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>