force-app/main/default/objects/CESContract__c/fields/Cashout_Under_Total_Adder__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Under_Total_Adder__c</fullName>
    <formula>Cashout_Under_Adder__c +  Cashout_Under_Margin__c</formula>
    <label>Cashout Under Total Adder</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>