force-app/main/default/objects/CESContract__c/fields/CEIP_ID__c.field-meta.xml
<CustomField>
    <fullName>CEIP_ID__c</fullName>
    <label>CEIP ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>