force-app/main/default/objects/CESContract__c/fields/CES_Office__c.field-meta.xml
<CustomField>
    <fullName>CES_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CES Contracts (CES Office)</relationshipLabel>
    <relationshipName>CES_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>