force-app/main/default/objects/CESContract__c/fields/CES_Office_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>CES_Office_DUNS_Number__c</fullName>
    <description>gets the duns number for the office, returns CEIP of utility is CEIP-LA</description>
    <formula>IF( Utility_Lookup__r.Utility_Code__c == &#39;CEIP-LA&#39;
  , &#39;79-937-6074&#39;
  , CES_Office__r.DUNS_Number__c 
)</formula>
    <label>CES Office DUNS Number</label>
    <type>Text</type>
</CustomField>