force-app/main/default/objects/CESContract__c/fields/CES_Office_Fed_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>CES_Office_Fed_Tax_ID__c</fullName>
    <description>gets the fed tax id of the office, returns CEIP if utility is CEIP-LA</description>
    <formula>IF( Utility_Lookup__r.Utility_Code__c == &#39;CEIP-LA&#39;
  , &#39;74-1949275&#39;
  , CES_Office__r.Fed_Tax_ID__c 
)</formula>
    <label>CES Office Fed Tax ID</label>
    <type>Text</type>
</CustomField>