force-app/main/default/objects/CESContract__c/fields/CES_Office_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>CES_Office_Location_Code__c</fullName>
    <formula>CES_Office__r.Location_Code__c</formula>
    <label>CES Office Location Code</label>
    <type>Text</type>
</CustomField>