force-app/main/default/objects/CESContract__c/fields/CES_Office_Name__c.field-meta.xml
<CustomField>
    <fullName>CES_Office_Name__c</fullName>
    <description>gets the name of the office, returns CEIP if utility is CEIP-LA</description>
    <formula>IF( Utility_Lookup__r.Utility_Code__c == &#39;CEIP-LA&#39;
  , &#39;CenterPoint Energy Intrastate Pipelines, LLC&#39;
  , CES_Office__r.Second_Name__c 
)</formula>
    <label>CES Office Name</label>
    <type>Text</type>
</CustomField>