force-app/main/default/objects/CESContract__c/fields/Charge_Name_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name_Admin_Fee__c</fullName>
    <formula>&#39;Administrative&#39;</formula>
    <label>Charge Name - Admin Fee</label>
    <type>Text</type>
</CustomField>