force-app/main/default/objects/CESContract__c/fields/Charge_Name_Basic_Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name_Basic_Charge__c</fullName>
    <formula>&#39;Basic Charge&#39;</formula>
    <label>Charge Name - Basic Charge</label>
    <type>Text</type>
</CustomField>