force-app/main/default/objects/CESContract__c/fields/Charge_Name_Demand_Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name_Demand_Charge__c</fullName>
    <formula>IF (CONTAINS( Safari_Key__c, &#39;MPLS-&#39; )
  , &#39;Monthly Firm Demand&#39;
  , IF (CONTAINS( Safari_Key__c, &#39;HOU-&#39; )
      , &#39;Monthly Demand Charge&#39;
      , null
    )
)</formula>
    <label>Charge Name - Demand Charge</label>
    <type>Text</type>
</CustomField>