force-app/main/default/objects/CESContract__c/fields/Charge_Name_IPD__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name_IPD__c</fullName>
    <formula>&#39;Interstate Pipeline Demand&#39;</formula>
    <label>Charge Name - IPD</label>
    <type>Text</type>
</CustomField>