force-app/main/default/objects/CESContract__c/fields/Charge_Name_Upstream_Transport_ACA__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name_Upstream_Transport_ACA__c</fullName>
    <formula>&#39;Pipeline Co. Transportation Commodity &amp; ACA Fees&#39;</formula>
    <label>Charge Name - Upstream Transport ACA</label>
    <type>Text</type>
</CustomField>