force-app/main/default/objects/CESContract__c/fields/Charge_Name_Upstream_Transport_Fee__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name_Upstream_Transport_Fee__c</fullName>
    <formula>&#39;Upstream Transportation Fee&#39;</formula>
    <label>Charge Name - Upstream Transport Fee</label>
    <type>Text</type>
</CustomField>