force-app/main/default/objects/CESContract__c/fields/Charge_Sync_OK_ALL__c.field-meta.xml
<CustomField>
    <fullName>Charge_Sync_OK_ALL__c</fullName>
    <formula>OR(ISPICKVAL(Safari_Sync_Status__c, &#39;Sync Complete&#39;), 
AND(
  OR(
    ISBLANK( Administrative_Charge__c ),
    Charge_Sync_OK_Admin_Fee__c
  ),
  OR(
    ISBLANK( Demand_Charge__c ),
    Charge_Sync_OK_Demand_Charge__c
  ),
  OR(
    ISBLANK( Fixed_Fees__c ),
    Charge_Sync_OK_Fixed_Fees__c
  ),
  OR(
    ISBLANK( Management_Fee__c ),
    Charge_Sync_OK_Management_Fee__c
  ),
  OR(
    TEXT( Utility_Meter_Read_Pooling__c ) = NULL,
    Charge_Sync_OK_Meter_Pooling_Fee__c,
    CES_Office_Code__c = &#39;LIVE&#39;
  ),
  OR(
    ISBLANK( Upstream_Transport_Commodity_ACA_Fees__c ),
    Charge_Sync_OK_Upstream_Transport_ACA__c
  ),
  OR(
    ISBLANK( Upstream_Transport_Fee__c ),
    Charge_Sync_OK_Upstream_Transport_Fee__c
  ),
  OR(
    ISBLANK( Upstream_Transport_Fuel_Charges__c ),
    Charge_Sync_OK_Upstream_Transport_Fuel__c
  ),
  OR(
    ISBLANK( CNP_MNG_Basic_Charge__c ),
    Charge_Sync_OK_CMG_Basic_Charge__c
  ),
  OR(
    ISBLANK( CNP_MNG_Delivery_Charge_Name__c ),
    Charge_Sync_OK_CMG_Delivery_Charge__c
  ),
  OR(
    ISBLANK( CNP_MNG_Guaranteed_Charge__c ),
    Charge_Sync_OK_CMG_Charge__c
  ),
  OR(
    ISBLANK( Interstate_Pipeline_Demand__c ),
    Charge_Sync_OK_IPD_Charge__c
  )
)
)</formula>
    <label>Charge Sync OK - ALL</label>
    <type>Checkbox</type>
</CustomField>