force-app/main/default/objects/CESContract__c/fields/Charge_Sync_OK_Fixed_Fees__c.field-meta.xml
<CustomField>
    <fullName>Charge_Sync_OK_Fixed_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Sync OK - Fixed Fees</label>
    <type>Checkbox</type>
</CustomField>