force-app/main/default/objects/CESContract__c/fields/Charge_Sync_OK_IPD_Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge_Sync_OK_IPD_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Sync OK - IPD Charge</label>
    <type>Checkbox</type>
</CustomField>