force-app/main/default/objects/CESContract__c/fields/Charge_Sync_OK_Upstream_Transport_ACA__c.field-meta.xml
<CustomField>
    <fullName>Charge_Sync_OK_Upstream_Transport_ACA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Sync OK - Upstream Transport ACA</label>
    <type>Checkbox</type>
</CustomField>