force-app/main/default/objects/CESContract__c/fields/CNP_MNG_Delivery_Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>CNP_MNG_Delivery_Charge_Name__c</fullName>
    <formula>CASE( Utility_Rate_Name__r.Name
  , &#39;CNP MNG Firm-C&#39;, &#39;DIST  MGC Firm-C Distribution + GAP&#39;
  , &#39;CNP MNG SVDF-A&#39;, &#39;DIST  MGC SVDF-A Distribution&#39;
  , &#39;CNP MNG SVDF-B&#39;, &#39;DIST  MGC SVDF-B Distribution&#39;
  , &#39;CNP MNG LVDF&#39;, &#39;DIST  MGC LVDF Distribution&#39;
  , NULL
)</formula>
    <label>CNP MNG Delivery Charge Name</label>
    <type>Text</type>
</CustomField>