force-app/main/default/objects/CESContract__c/fields/CNP_MNG_Generic_Charge_Rate_Name__c.field-meta.xml
<CustomField>
    <fullName>CNP_MNG_Generic_Charge_Rate_Name__c</fullName>
    <formula>IF(
  Utility_Lookup__r.Utility_Code__c = &#39;MGCO&#39;
  , IF(
      CONTAINS(Product_Subtype_Lookup__r.Name, &#39;Guaranteed Value&#39;)
      , &#39;GVD  Gvalue Discount Rate&#39;
      , null
    )
  , null
)</formula>
    <label>CNP MNG Generic Charge Rate Name</label>
    <type>Text</type>
</CustomField>