force-app/main/default/objects/CESContract__c/fields/CNP_MNG_Generic_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>CNP_MNG_Generic_Charge_Type__c</fullName>
    <formula>IF(
  OR(
    CONTAINS(Product_Subtype_Lookup__r.Name, &#39;Guaranteed Supply&#39;),
    CONTAINS(Product_Subtype_Lookup__r.Name, &#39;plus Supply&#39;)
  )
  , IF(
      CONTAINS(Utility_Rate_Name__r.Name, &#39;LVDF&#39;)
      , &#39;Guaranteed Supply Volumetric Charge - Large Volume&#39;
      , &#39;Guaranteed Supply Volumetric Charge - Small Volume&#39;
    )
  , IF(
      CONTAINS(Product_Subtype_Lookup__r.Name, &#39;Enhanced Supply&#39;)
      , &#39;Enhanced Supply Volumetric Charge&#39;
      , IF(
          CONTAINS(Product_Subtype_Lookup__r.Name, &#39;Guaranteed Value&#39;)
          , &#39;Guaranteed Value Discount Rate&#39;
          , IF(
              CONTAINS(Product_Subtype_Lookup__r.Name, &#39;Guaranteed Savings&#39;)
              , &#39;Guaranteed Savings Discount Charge&#39;
              , null
            )
        )
    )
)</formula>
    <label>CNP MNG Generic Charge Type</label>
    <type>Text</type>
</CustomField>