force-app/main/default/objects/CESContract__c/fields/CNP_MNG_Guaranteed_Charge__c.field-meta.xml
<CustomField>
    <fullName>CNP_MNG_Guaranteed_Charge__c</fullName>
    <description>the premium or discount of &quot;guaranteed&quot; products</description>
    <inlineHelpText>For Charge Level = Unit, enter MMBtu equivalent value</inlineHelpText>
    <label>CNP MNG Guaranteed Charge/Discount</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>