force-app/main/default/objects/CESContract__c/fields/CNP_MNG_GVAL_Generic_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>CNP_MNG_GVAL_Generic_Charge_Type__c</fullName>
    <formula>IF( Product_Subtype_Lookup__r.Name == &#39;Index Guaranteed Value plus Supply&#39;
  , &#39;Guaranteed Value Discount Rate&#39;
  , null
)</formula>
    <label>CNP MNG GVAL Generic Charge Type</label>
    <type>Text</type>
</CustomField>