force-app/main/default/objects/CESContract__c/fields/CNP_MNG_Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>CNP_MNG_Product_Cost__c</fullName>
    <description>default cost for product.  populated from custom setting at the time of creation so contract is not affected by future changes to custom setting</description>
    <label>CNP MNG Product Cost</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>