force-app/main/default/objects/CESContract__c/fields/Complex_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Complex_Contract_Type__c</fullName>
    <label>Manual / Complex Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMA</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
            <value>
                <fullName>BTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>