force-app/main/default/objects/CESContract__c/fields/Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status__c</fullName>
    <label>Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>