force-app/main/default/objects/CESContract__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid Consultant 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CES Contracts for Consultant</relationshipLabel>
    <relationshipName>CES_Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>