force-app/main/default/objects/CESContract__c/fields/Consultant_Unit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Unit_Margin__c</fullName>
    <label>Consultant Unit Margin</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>