force-app/main/default/objects/CESContract__c/fields/Contact_for_Confirmations__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Confirmations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact for Confirmations</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CES Contracts (Contact for Confirmations)</relationshipLabel>
    <relationshipName>CES_Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>