force-app/main/default/objects/CESContract__c/fields/Contact_for_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Invoices__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who gets the invoices?</description>
    <inlineHelpText>Who gets the invoices?</inlineHelpText>
    <label>Contact for Invoices</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <infoMessage>Filtered for Contract Account Contacts.  Remove filter to search for Account Contact Roles</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>