force-app/main/default/objects/CESContract__c/fields/Contacts_Selected__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Selected__c</fullName>
    <formula>IF(
  OR(ISBLANK( Contact_for_Confirmations__c ),
       AND(ISBLANK( Contact_for_Invoices__c ), Invoice_Accounts_Payable__c = false ),
       ISBLANK( Contact_for_Notices__c )
    )
, false
, true
)</formula>
    <label>Contacts Selected</label>
    <type>Checkbox</type>
</CustomField>