force-app/main/default/objects/CESContract__c/fields/Contract_Admin_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>Contract_Admin_Mailbox__c</fullName>
    <description>for internal system notifications</description>
    <inlineHelpText>for internal system notifications</inlineHelpText>
    <label>Contract Admin Mailbox</label>
    <type>Email</type>
</CustomField>