force-app/main/default/objects/CESContract__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <description>ID to be entered into other systems to reference this record</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>ID to be entered into other systems to reference this record</inlineHelpText>
    <label>Contract ID</label>
    <type>Text</type>
</CustomField>