force-app/main/default/objects/CESContract__c/fields/Contract_Margin_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Margin_to_Date__c</fullName>
    <label>Contract Margin to Date</label>
    <summarizedField>Contract_Margin__c.Margin__c</summarizedField>
    <summaryForeignKey>Contract_Margin__c.CESContract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>