force-app/main/default/objects/CESContract__c/fields/Contract_Maximum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Contract_Maximum_Quantity__c</fullName>
    <label>Contract Maximum Daily Quantity (MMBtu)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>