force-app/main/default/objects/CESContract__c/fields/Contract_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Contract_Minimum_Quantity__c</fullName>
    <label>Contract Minimum Quantity (MMBtu)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>