force-app/main/default/objects/CESContract__c/fields/Contract_Minimum_Quantity_for_TC__c.field-meta.xml
<CustomField>
    <fullName>Contract_Minimum_Quantity_for_TC__c</fullName>
    <formula>IF ( ISPICKVAL( MDQ_Unit__c , &#39;Therm&#39; )
   , Contract_Minimum_Quantity__c * 10
   , Contract_Minimum_Quantity__c
)</formula>
    <label>Contract Minimum Quantity for TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>