force-app/main/default/objects/CESContract__c/fields/Contract_Number_and_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_and_Type__c</fullName>
    <formula>Name &amp; &#39;: &#39; &amp; Record_Type_Name__c</formula>
    <label>Contract Number and Type</label>
    <type>Text</type>
</CustomField>