force-app/main/default/objects/CESContract__c/fields/Contract_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_Formula__c</fullName>
    <formula>IF( RecordType.Name = &#39;Acquisition Enabling Agreement&#39;,null,
IF(
ISBLANK( Safari_Contract_Number__c ), 
Name , 
Safari_Contract_Number__c 
))</formula>
    <label>Contract Number Formula</label>
    <type>Text</type>
</CustomField>