force-app/main/default/objects/CESContract__c/fields/Contract_Number_Formula_and_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_Formula_and_Type__c</fullName>
    <formula>BLANKVALUE(Contract_Number_Formula__c, Name) &amp; &quot;: &quot; &amp; Record_Type_Name__c</formula>
    <label>Contract Number Formula and Type</label>
    <type>Text</type>
</CustomField>