force-app/main/default/objects/CESContract__c/fields/Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner__c</fullName>
    <formula>Opportunity__r.Owner.FirstName + &quot; &quot; +  Opportunity__r.Owner.LastName</formula>
    <label>Contract Owner</label>
    <type>Text</type>
</CustomField>