force-app/main/default/objects/CESContract__c/fields/Contract_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner_Email__c</fullName>
    <formula>Opportunity__r.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Owner Email</label>
    <type>Text</type>
</CustomField>