force-app/main/default/objects/CESContract__c/fields/Contract_Print_Format__c.field-meta.xml
<CustomField>
    <fullName>Contract_Print_Format__c</fullName>
    <formula>CASE(Contract_Format__c
  , &#39;Version 1&#39;, &#39;Version 3.2&#39;
  , &#39;Version 3&#39;, &#39;Version 3.2&#39;
  , &#39;Acquisition&#39;, &#39;Version 3.2&#39;
  , &#39;Customer&#39;, &#39;Version 3.2&#39;
  , &#39;Energon&#39;, &#39;Version 3.2&#39;
  , &#39;Nordic&#39;, &#39;Version 3.2&#39; 
  , Contract_Format__c
)</formula>
    <label>Contract Print Format</label>
    <type>Text</type>
</CustomField>