force-app/main/default/objects/CESContract__c/fields/Contract_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Program_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Program Type</label>
    <referenceTo>Contract_Program_Type__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>