force-app/main/default/objects/CESContract__c/fields/Contract_Program_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Program_Type_ID__c</fullName>
    <formula>Contract_Program_Type__r.Safari_Key_Formula__c</formula>
    <label>Contract Program Type ID</label>
    <type>Text</type>
</CustomField>