force-app/main/default/objects/CESContract__c/fields/Contract_Request__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request__c</fullName>
    <label>Contract Request</label>
    <length>50</length>
    <type>Text</type>
</CustomField>