force-app/main/default/objects/CESContract__c/fields/Contract_Request_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_140, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_140)+3) + &#39;/&#39; + Contract_Request__c , &#39;Click to go to Contract Request&#39;)</formula>
    <label>Contract Request Link</label>
    <type>Text</type>
</CustomField>