force-app/main/default/objects/CESContract__c/fields/Create_Sync_Field_Values_On_Insert__c.field-meta.xml
<CustomField>
    <fullName>Create_Sync_Field_Values_On_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set this to true on inserted records to create user field values</description>
    <label>Create Sync Field Values On Insert</label>
    <type>Checkbox</type>
</CustomField>