force-app/main/default/objects/CESContract__c/fields/Credit_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Required__c</fullName>
    <formula>OR( 
Total_Volume__c &gt;= 120000, 
Avg_Monthly_Volume__c &gt;= 10000, 
Tenor__c &gt;= 13 
)</formula>
    <label>Credit Approval Required</label>
    <type>Checkbox</type>
</CustomField>