force-app/main/default/objects/CESContract__c/fields/Credit_Pre_Approval_Applies__c.field-meta.xml
<CustomField>
    <fullName>Credit_Pre_Approval_Applies__c</fullName>
    <formula>OR(
  TEXT(Opportunity__r.Burn_Level__c) == &quot;~10/Day&quot;,
  TEXT(Opportunity__r.Burn_Level__c) == &quot;&gt;10/Day&quot;,
  TEXT(Opportunity__r.Burn_Level__c) == &quot;&gt;25/Day&quot;
)</formula>
    <label>Credit Pre-Approval Applies</label>
    <type>Checkbox</type>
</CustomField>